--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>WebTech Developers Main Site</title>
+    <title>WebTek Developers Main Site</title>
     <!-- custom-theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Technical Solutions a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords" content="" />
     <script type="application/x-javascript">
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -33,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //font-awesome-icons -->
 
     <!-- google fonts -->
-    
+
     <link href="css/google.css" rel="stylesheet" type="text/css" media="all" />
     <!-- //google fonts -->
 
@@ -54,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-                            <h1><a class="navbar-brand" href="index.html"> WebTech <span>Developers</span></a></h1>
+                            <h1><a class="navbar-brand" href="index.html"> WebTek <span>Developers</span></a></h1>
                         </div>
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -64,7 +63,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <li><a href="#about" class="scroll">About</a></li>
                                     <li><a href="#services" class="scroll">Services</a></li>
                                     <li><a href="#team" class="scroll">Team</a></li>
-                                    <li><a href="#testimonials" class="scroll">Testimonials</a></li>
                                     <li><a href="#contact" class="scroll">Contact</a></li>
                                 </ul>
                                 <ul class="footericons">
@@ -205,8 +203,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="aboutbottom">
             <div class="container">
-                <div class="bottomgrids" >  
-                      <div class="col-md-3 bottomgrid1">
+                <div class="bottomgrids">
+                    <div class="col-md-3 bottomgrid1">
                         <h3>2017</h3>
                         <span class="fa fa-circle" aria-hidden="true"></span>
                         <h4>Management</h4>
@@ -218,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <h4>Theme core</h4>
                         <p>Donec et venenatis libero. Fusceing dapibus pulvinar tincidunt. Proin maximus ipsum ut scelerisque.</p>
                     </div>
-                        <div class="clearfix"> </div>
+                    <div class="clearfix"> </div>
                 </div>
             </div>
         </div>
@@ -291,7 +289,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a>
                         </div>
                     </div>
-                   
+
                     <div class="col-md-4 agileits_team_grid">
                         <div class="agileits_team_grid_figure">
                             <img src="images/team3.jpg" alt=" " class="img-responsive" />
@@ -537,7 +535,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="copy-right">
         <div class="container">
             <div class="col-md-8">
-                <p>&copy; 2017 Technical Solutions. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+                <p>&copy; 2017 WebTek. All rights reserved | Design by <a href="#">WebTek</a></p>
             </div>
             <div class="col-md-4">
                 <ul class="footericons">
